# a-simple-llm-kit

./: .gitignore  Dockerfile  Dockerfile.modal  INFRASTRUCTURE.md  README.md  config.yaml  deploy_modal_app.py  docker-compose.yml  modal.py  modal_app.py  modal_deploy.py  pyproject.toml  pytest.ini  requirements.txt  server.py  setup.py
.github/actions/update_tunnel/: action.yml
.github/workflows/: debug_tunnel.yml  deploy_aws.yml  deploy_modal.yml  deploy_modal_app.py  lint.yml  modal_deploy.yml  publish-package.yml  test.yml  update-tunnel.yml
app/: API_VERSIONING.md  PROGRAM_TRACKING.md  main.py
app/api/: example_versioned_endpoint.py  routes.py  routes_programs.py  schemas.py
app/api/schemas/: model_config.py  requests.py  responses.py
app/core/: base.py  circuit_breaker.py  config.py  dspy_backend.py  error_handling.py  factories.py  implementations.py  latency_middleware.py  logging.py  metrics_factory.py  metrics_middleware.py  metrics_wrappers.py  middleware.py  model_interfaces.py  modules.py  orientation_debugger.py  output_processors.py  pipeline.py  program_registry.py  protocols.py  providers.py  rate_limiting.py  security.py  timestamp_dependency.py  types.py  utils.py  versioning.py
app/models/: manager.py  predictor.py  program_manager.py
app/pipelines/: registry.py
app/pipelines/steps/: base.py  image.py  text.py
app/services/: prediction.py
app/services/pipelines/: predictor.py
config/: model_config.yaml  model_config.yml
docs/: CONTACT_EXTRACTION.md
prometheus/: prometheus.yml
src/a_simple_llm_kit/adapters/: caching_chat_adapter.py
src/a_simple_llm_kit/core/: implementations.py  metrics_wrappers.py  types.py  utils.py
src/a_simple_llm_kit/models/: program_manager.py  signatures.py
src/llm_server/: API_VERSIONING.md  PROGRAM_TRACKING.md  __init__.py  defaults.py  main.py  runner.py
src/llm_server/api/: example_versioned_endpoint.py  routes.py  routes_programs.py
src/llm_server/api/schemas/: model_config.py  requests.py  responses.py
src/llm_server/cn/: circuit_breaker.py  metrics_wrappers.py
src/llm_server/core/: __init__.py  base.py  circuit_breaker.py  config.py  context.py  dspy_backend.py  error_handling.py  factories.py  image_utils.py  implementations.py  logging.py  metrics_factory.py  metrics_middleware.py  metrics_wrappers.py  middleware.py  model_interfaces.py  modules.py  opentelemetry_integration.py  orientation_debugger.py  output_processors.py  pipeline.py  program_registry.py  protocols.py  providers.py  rate_limiting.py  security.py  storage.py  types.py  utils.py  versioning.py
src/llm_server/models/: manager.py  predictor.py  program_manager.py
src/llm_server/services/: prediction.py
src/llm_server/services/pipelines/: predictor.py
src/llm_server/to_be_migrated/: prediction.py  rate_limiting.py  routes_programs.py  security.py
tests/core/: test_context_processor.py  test_factories.py  test_pipeline.py  test_protocols.py
tests/services/pipelines/: test_predictor.py
